added pub_date to books

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,6 +5,8 @@
   <%= @book.title %>
   <strong>Author:</strong>
   <%= @book.author %>
+  <strong>Publication Date:</strong>
+  <%= @book.pub_date %>
 </p>
 
 <%= link_to 'Edit', edit_book_path(@book) %> |
