--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -21,6 +21,11 @@
     <%= form.text_field :author %>
   </div>
 
+  <div class="field">
+    <%= form.label :pub_date %>
+    <%= form.text_field :pub_date %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
