--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -22,8 +22,13 @@
   </div>
 
   <div class="field">
-    <%= form.label :pub_date %>
+    <%= form.label :pub_date, "Publication Date" %>
     <%= form.text_field :pub_date %>
+  </div>
+
+  <div class="field">
+    <%= form.label :price %>
+    $<%= form.text_field :price %>
   </div>
 
   <div class="actions">
