--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Best Amazing Books Ever Collection</h1>
-<h2>This is a test version, again.</h2>
+<h2>This is a test version, again. By Jose Carrillo for CSCE 431 Fall 2022.</h2>
 <table>
   <thead>
     <tr>
