--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,14 +1,15 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Best Amazing Books Ever Collection</h1>
-<h2>This is a test version, again. By Jose Carrillo for CSCE 431 Fall 2022.</h2>
+<h1>Books</h1>
+
 <table>
   <thead>
     <tr>
       <th>Title</th>
       <th>Author</th>
-      <th>Publication Date (YYYY-MM-DD)</th>
-      <th>Price ($)</th>
+      <th>Price</th>
+      <th>Published date</th>
+      <th>Actions</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,11 +19,13 @@
       <tr>
         <td><%= book.title %></td>
         <td><%= book.author %></td>
-        <td><%= book.pub_date %></td>
-        <td><%= number_to_currency(book.price) %></td>
-        <td><%= link_to 'Show', book %></td>
-        <td><%= link_to 'Edit', edit_book_path(book) %></td>
-        <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= book.price %></td>
+        <td><%= book.published_date %></td>
+        <td class="actions">
+          <%= link_to("Show", book_path(book), :class => 'action show') %>
+          <%= link_to("Edit", edit_book_path(book), :class => 'action edit') %>
+          <%= link_to("Delete", delete_book_path(book), :class => 'action delete') %>
+        </td>
       </tr>
     <% end %>
   </tbody>
